# paletter

./: Cargo.toml  README.md
src/: color.rs  lib.rs  main.rs  median_cut.rs  octree.rs  quantize.rs
