[package]
name = "paletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
image = "0.25.2"
termcolor = "1.4.1"
